--- a/src/template/menu.html
+++ b/src/template/menu.html
@@ -1,5 +1,4 @@
 <div class="menu-line">
-   <div class="menu-line__top-background"></div>
     <div class="wrapper flex">
         <nav class="navbar">
             <ul class="menu">
@@ -23,10 +22,9 @@
                 </li>
             </ul>
         </nav>
-        <div class="wholesale">
+        <a href="#" class="wholesale">
             <div class="wholesale__icon"></div>
             <div>Оптовым клиентам</div>
-        </div>
+        </a>
     </div>
-    <div class="menu-line__bottom-background"></div>
 </div>
