--- a/src/template/slider.html
+++ b/src/template/slider.html
@@ -1,36 +1,59 @@
-<div class="slider">
-    <div class="wrapper">
-        <div class="slider__inner">
-            <div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="slider flex_between">
                 <img class="slider__img" src="images/img-slide1.png" alt="макаронс">
-                <div class="slider__banner banner">
-                    <div class="banner__discount">скидка</div>
-                    <div class="banner__percent">20%</div>
-                    <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
-                    <div class="banner__time">21:00 - 22:00</div>
-                    <a href="#" class="banner__button">ПОДРОБНЕЕ</a>
-                </div>
-            </div>
-            <div>
-                <div class="slider__img"></div>
-                <div class="slider__banner banner">
-                    <div class="banner__discount">скидка</div>
-                    <div class="banner__percent">30%</div>
-                    <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
-                    <div class="banner__time">21:00 - 22:00</div>
-                    <a href="#" class="banner__button">ПОДРОБНЕЕ</a>
-                </div>
-            </div>
-            <div>
-                <div class="slider__img"></div>
-                <div class="slider__banner banner">
-                    <div class="banner__discount">скидка</div>
-                    <div class="banner__percent">40%</div>
-                    <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
-                    <div class="banner__time">21:00 - 22:00</div>
-                    <a href="#" class="banner__button">ПОДРОБНЕЕ</a>
+                <div class="slider__banner-wr flex">
+                    <div class="slider__banner banner">
+                        <div class="banner__discount">скидка</div>
+                        <div class="banner__percent">20%</div>
+                        <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
+                        <div class="banner__time">21:00 - 22:00</div>
+                        <a href="#" class="button banner__button button_beige">Подробнее</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="carousel-item">
+            <div class="slider flex_between">
+                <img class="slider__img" src="images/img-slide1.png" alt="макаронс">
+                <div class="slider__banner-wr flex">
+                    <div class="slider__banner banner">
+                        <div class="banner__discount">скидка</div>
+                        <div class="banner__percent">20%</div>
+                        <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
+                        <div class="banner__time">21:00 - 22:00</div>
+                        <a href="#" class="button banner__button button_beige">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="slider flex_between">
+                <img class="slider__img" src="images/img-slide1.png" alt="макаронс">
+                <div class="slider__banner-wr flex">
+                    <div class="slider__banner banner">
+                        <div class="banner__discount">скидка</div>
+                        <div class="banner__percent">20%</div>
+                        <div class="banner__happy-hours">СЧАСТЛИВЫЕ ЧАСЫ</div>
+                        <div class="banner__time">21:00 - 22:00</div>
+                        <a href="#" class=" button banner__button button_beige">Подробнее</a>
+                    </div>
+                </div>
+            </div>            
+        </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
