--- a/src/css/parts/base-blocks.less
+++ b/src/css/parts/base-blocks.less
@@ -20,25 +20,41 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'RuslanDisplay';
+    src: url('../fonts/RuslanDisplay.eot');
+    src: url('../fonts/RuslanDisplay.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/RuslanDisplay.woff2') format('woff2'),
+        url('../fonts/RuslanDisplay.woff') format('woff'),
+        url('../fonts/RuslanDisplay.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body{
     margin:0;
 	padding: 0;
 	font-family: "FinchFrame3", sans-serif;
 	font-size: 15px;
     font-weight: 400;
-	line-height:1.4;
+    line-height: 1;
     letter-spacing: 0.04em;
-    color: rgb(0, 0, 0);
+    color: rgb(63, 67, 64);
 	min-width: 360px;
 }
 
-button,input,select,textarea{
+button,input,select,textarea {
     font-family: "FinchFrame3"; 
-    font-size: 17px;
+    font-size: 15px;
 }
 
 h1,h2,h3,h4,h5 {
     margin: 0;
+}
+
+a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
 .wrapper {
@@ -65,27 +81,36 @@ h1,h2,h3,h4,h5 {
     text-decoration: none;
     outline: none;
     text-align: center;
-    padding: 0 30px;
 }
 
-.button_framed-white {
-    border: 2px solid rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0);
-    height: 46px;
-    font: 700 13px/46px "Acrom";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-.button_pink {
-    border: 1px solid rgb(232, 162, 182);
+.button_blue {
+    border: 2px solid rgb(63, 67, 64);
     border-radius: 2px;
-    background: rgb(255,150,180);
-    background-image: linear-gradient( 0deg, rgb(255,150,180) 0%, rgb(255,255,255) 100%);
-    box-shadow: 0 4px 3px 0 rgba(0,0,0,.1), inset #ffffff 0 0 0px 1px;
-    max-width: 358px;
-    height: 78px;
+    background-color: rgb(246, 251, 254);
+    box-shadow: 0px 7px 7.8px 2.2px rgba(0, 0, 0, 0.2);
+    font-size: 41px;
+    color: rgb(63, 67, 64);
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 7px 30px;
+}
+
+.button_center {
+    margin: 0 auto;
+}
+
+.button_beige {
+    border: 2px solid rgba(246, 251, 254, 0.7);
+    height: 40px;
+    border-radius: 2px;
+    background-color: rgb(240, 232, 193);
+    box-shadow: 0px 7px 7.8px 2.2px rgba(0, 0, 0, 0.2);
+    font-size: 33px;
+    line-height: 40px;
+    color: rgb(40, 40, 40);
+    font-weight: 700;
+    padding: 0 20px;
+    text-transform: uppercase;
 }
 
 
