--- a/src/css/parts/slider.less
+++ b/src/css/parts/slider.less
@@ -1,380 +1,144 @@
 /* Slider */
 
-.slider {
+.carousel {
     background-color: rgb(246, 251, 254);
-    padding: 50px;
-    overflow: hidden;
+    border-bottom: 5px solid rgba(240, 232, 193, 0.7);
+    box-shadow: 0px 10px 14.7px 0.3px rgba(0, 0, 0, 0.21);
+    padding: 35px 0 0;
+    margin-top: -50px;
 }
 
-.slider__img {
-    float: left;
+.slider {
+    max-width: 945px;
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
 .banner {
     box-sizing: border-box;
     border-radius: 2px;
     background-color: rgb(246, 251, 254);
-    box-shadow: 0px 10px 14.7px 0.3px rgba(0, 0, 0, 0.41);
-    padding: 30px;
+    box-shadow: 2px 2px 14.7px 0.3px rgba(0,0,0,.41);
+    padding: 0 70px 30px;
     max-width: 500px;
-    float: right;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto 0;
 }
 
 .banner__discount {
-    font-size: 46px;
-    color: rgb(240, 232, 193);
+    font-size: 62px;
+    line-height: 1;
     font-weight: 700;
-    text-align: center;
+    background-color: #f0e8c1;
+    color: transparent;
+    text-shadow: 0 0px 0px rgba(0,0,0,0.2);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
 
 .banner__percent {
     font-size: 200px;
+    line-height: 1;
     font-family: "RuslanDisplay";
     color: rgb(40, 40, 40);
-    text-align: center;
     text-shadow: 0px 7px 7.8px rgba(0, 0, 0, 0.2);
+    -webkit-text-stroke: 6px #f0e8c1;
 }
 
 .banner__happy-hours {
     font-size: 62px;
+    line-height: 1;
     color: rgb(40, 40, 40);
     font-weight: 700;
-    text-align: center;
+    margin-top: -40px;
 }
 
-.banner__time{
+.banner__time {
     font-size: 50px;
+    line-height: 1;
     color: rgb(40, 40, 40);
     font-weight: 700;
-    text-align: center;
+    letter-spacing: 11px;
 }
 
 .banner__button {
-    border: 2px solid rgba(246, 251, 254, 0.7);
+    width: 250px;
+}
+
+.carousel-indicators {
+    bottom: -3px;
+}
+
+.carousel-indicators li {
+    border-radius: 50%;
+    background-color: rgba(63, 67, 64, 0.8);
+    width: 13px;
+    height: 13px;
+    margin: 0 12px;
+}
+
+.carousel-indicators .active {
+    background-color: rgba(255,255,255,.5);
+    border: 2px solid rgb(63, 67, 64);
+}
+
+.carousel-control-next-icon {
+    background: url(../../images/icons/right-arrow.svg) no-repeat center;
+    width: 35px;
     height: 40px;
-    box-sizing: border-box;
-    border-radius: 2px;
-    background-color: rgb(240, 232, 193);
-    box-shadow: 0px 7px 7.8px 2.2px rgba(0, 0, 0, 0.2);
-    font-size: 33px;
-    line-height: 40px;
-    color: rgb(40, 40, 40);
-    font-weight: 700;
-    text-align: center;
-    text-decoration: none;
-    padding: 0 20px;
-}
-
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-}
-
-.slick-track
-{
-    position: relative;
-    top: 0;
-    left: 0;
-
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
-
-.slick-slide
-{
-    display: none;
-    float: left;
-
-    height: 100%;
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-
-    height: auto;
-
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
-
-/* Slider */
-.slick-loading .slick-list
-{
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
-}
-
-/* Arrows */
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-
-    position: absolute;
-    top: 50%;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover:before,
-.slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before
-{
-    opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
-    opacity: .25;
-}
-
-.slick-prev:before,
-.slick-next:before
-{
-    font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-
-    opacity: .75;
-    color: white;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.slick-prev
-{
-    left: -25px;
-}
-[dir='rtl'] .slick-prev
-{
     right: -25px;
-    left: auto;
-}
-.slick-prev:before
-{
-    content: '←';
-}
-[dir='rtl'] .slick-prev:before
-{
-    content: '→';
+    top: 75px;
 }
 
-.slick-next
-{
-    right: -25px;
+.carousel-control-next-icon:hover {
+    background: url(../../images/icons/right-arrow_hover.svg) no-repeat center;
 }
-[dir='rtl'] .slick-next
-{
-    right: auto;
+
+.carousel-control-prev-icon {
+    background: url(../../images/icons/right-arrow.svg) no-repeat center;
+    width: 35px;
+    height: 40px;
     left: -25px;
-}
-.slick-next:before
-{
-    content: '→';
-}
-[dir='rtl'] .slick-next:before
-{
-    content: '←';
+    top: 75px;   
+    transform: rotate(180deg);
 }
 
-/* Dots */
-.slick-dotted.slick-slider
-{
-    margin-bottom: 30px;
+.carousel-control-prev-icon:hover {
+    background: url(../../images/icons/right-arrow_hover.svg) no-repeat center;
 }
 
-.slick-dots
-{
-    position: absolute;
-    bottom: -25px;
+@media screen and (max-width: 1279px) {
 
-    display: block;
-
-    width: 100%;
-    padding: 0;
-    margin: 0;
-
-    list-style: none;
-
-    text-align: center;
 }
-.slick-dots li
-{
-    position: relative;
 
-    display: inline-block;
+@media screen and (max-width: 1023px) {
+    .slider__img {
+        display: none;
+    }
+    
+    .slider {
+        padding: 50px 0;
+        justify-content: center;
+    }
+    
+    .slider__img {
+        display: none;
+    }
 
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
-    padding: 0;
-
-    cursor: pointer;
 }
-.slick-dots li button
-{
-    font-size: 0;
-    line-height: 0;
 
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent;
+@media screen and (max-width: 767px) {
+    .carousel {
+        display: none;
+    }
 }
-.slick-dots li button:hover,
-.slick-dots li button:focus
-{
-    outline: none;
+
+@media screen and (max-width: 639px) {
+    
 }
-.slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
-    opacity: 1;
-}
-.slick-dots li button:before
-{
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
 
-    position: absolute;
-    top: 0;
-    left: 0;
 
-    width: 20px;
-    height: 20px;
-
-    content: '•';
-    text-align: center;
-
-    opacity: .25;
-    color: black;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before
-{
-    opacity: .75;
-    color: black;
-}
 
