--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,28 +1,38 @@
 <footer>
     <div class="wrapper flex">
         <div class="footer-column1">
-            <a href="/" class="logo"></a>
-            <a href="#">Политика конфиденциальности</a>
-            <a href="#">Публичная оферта</a>
+            <a href="/" class="logo logo_footer"></a>
+            <div class="footer_mobile">
+                <div class="social flex">
+                    <div class="social__icon social__icon_vk"></div>
+                    <div class="social__icon social__icon_insta"></div>
+                </div>
+                <a href="#" class="developers">Разработано в IT <span>Police</span></a>
+            </div>
+            <a class="footer-link" href="#">Политика конфиденциальности</a>
+            <a class="footer-link" href="#">Публичная оферта</a>
         </div>
-        <div class="footer-column2">
-            <div class="footer-address">ул. 40 лет октября 42/1</div>
-            <div class="footer-schedule">Работа пекарни: с 08:00 до 22:00</div>
-            <div class="footer-schedule">Прием заказов: с 09:00 до 19:00</div>
-            <div class="flex">
-                <div class="paypal-icon"></div>
-                <div class="visa-icon"></div>
+        <div class="footer-columns2-3 flex">
+            <div class="footer-column2">
+                <div class="footer-address">ул. 40 лет октября 42/1</div>
+                <div class="footer-schedule">Работа пекарни: с 08:00 до 22:00</div>
+                <div class="footer-schedule">Прием заказов: с 09:00 до 19:00</div>
+                <div class="payments flex">
+                    <div class="payments__paypal-icon"></div>
+                    <div class="payments__visa-icon"></div>
+                </div>
+            </div>
+            <div class="footer-column3">
+                <div class="footer-address">Индустрии 104. ЖК Каскад</div>
+                <div class="footer-schedule">Работа пекарни: с 08:00 до 22:00</div>
+                <div class="footer-schedule">Прием заказов: с 09:00 до 19:00</div>
+                <div class="social flex">
+                    <a href="#" class="social__icon social__icon_vk"></a>
+                    <a href="#" class="social__icon social__icon_insta"></a>
+                </div>
+                <a href="#" class="developers">Разработано в IT <span>Police</span></a>
             </div>
         </div>
-        <div class="footer-column3">
-            <div class="footer-address">Индустрии 104. ЖК Каскад</div>
-            <div class="footer-schedule">Работа пекарни: с 08:00 до 22:00</div>
-            <div class="footer-schedule">Прием заказов: с 09:00 до 19:00</div>
-            <div class="social flex">
-                <div class="social__icon social__icon_vk"></div>
-                <div class="social__icon social__icon_insta"></div>
-            </div>
-            <a href="#" class="developers">Разработано в IT <span>Police</span></a>
-        </div>
+        <a href="/" class="logo logo_footer logo_mobile"></a>
     </div>
 </footer>
