--- a/src/css/main.less
+++ b/src/css/main.less
@@ -138,6 +138,36 @@
     transform: rotate(5deg);
 }
 
+/*catalog-page*/
+
+.inner-caption {
+    font: 700 62px "FinchFrame3";
+    text-align: center;
+}
+
+.inner-caption_small {
+    font: 700 25px "FinchFrame3";
+    text-align: center;
+}
+
+.catalog-page__sort {
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.select-caption {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+}
+
+select option {
+    background: black;
+}
+
+
+
+
 
 /*media*/
 
