--- a/src/css/parts/layer-slider.less
+++ b/src/css/parts/layer-slider.less
@@ -42,13 +42,16 @@
     justify-content: center;
 }
 
+.cake-layer__control-wr {
+    margin: auto 5px;
+}
+
 .cake-layer__control {
     border: 2px solid rgb(0, 0, 0);
     border-radius: 50%;
     background-color: rgb(246, 251, 254);
     width: 18px;
     height: 18px;
-    margin: auto 5px;
 }
 
 .cake-layer__control_active {
