--- a/src/css/parts/menu.less
+++ b/src/css/parts/menu.less
@@ -117,7 +117,7 @@
 
 @media screen and (max-width: 1023px) {
     
-    .menu__item a {
+    .menu .menu__item a {
         padding: 60px 5px 10px;
     }
 }
