--- a/src/template/designer.html
+++ b/src/template/designer.html
@@ -122,7 +122,7 @@
                         <div class="designer__answer">
                             @@include('ui-slider-range.html')
                             <label class="input-wrapper">
-                                <input class="input" type="text" placeholder="вес торта">
+                                <input class="input input_weight" type="text" placeholder="вес торта">
                             </label>
                         </div>
                     </div>
