--- a/src/template/layer-slider.html
+++ b/src/template/layer-slider.html
@@ -34,11 +34,21 @@
                 </div>
             </div>
             <div class="cake-layer__controls flex">
-                <div class="cake-layer__control"></div>
-                <div class="cake-layer__control"></div>
-                <div class="cake-layer__control"></div>
-                <div class="cake-layer__control"></div>
-                <div class="cake-layer__control"></div>
+                <label for="layer1" class="cake-layer__control-wr">
+                    <div class="cake-layer__control"></div>
+                </label>
+                <label for="layer2" class="cake-layer__control-wr">
+                    <div class="cake-layer__control"></div>
+                </label>
+                <label for="layer3" class="cake-layer__control-wr">
+                    <div class="cake-layer__control"></div>
+                </label>
+                <label for="layer4" class="cake-layer__control-wr">
+                    <div class="cake-layer__control"></div>
+                </label>
+                <label for="layer5" class="cake-layer__control-wr">
+                    <div class="cake-layer__control"></div>
+                </label>
             </div>
             <div class="cake-layer__preview flex">
                 <label class="radio-wrapper_layer">
@@ -46,35 +56,35 @@
                         <img src="images/layer1.png" alt="">
                     </span>
                     <span class="radio-label_layer">Бисквитно-ванильный</span>
-                    <input type="radio">
+                    <input id="layer1" type="radio">
                 </label>
                 <label class="radio-wrapper_layer">
                     <span class="radio-img-wr_layer">
                         <img src="images/layer2.png" alt="">
                     </span>
                     <span class="radio-label_layer">Бисквитно-шоколадный</span>
-                    <input type="radio">
+                    <input id="layer2" type="radio">
                 </label>
                 <label class="radio-wrapper_layer">
                     <span class="radio-img-wr_layer">
                         <img src="images/layer1.png" alt="">
                     </span>
                     <span class="radio-label_layer">Миндально-ореховый</span>
-                    <input type="radio">
+                    <input id="layer3" type="radio">
                 </label>
                 <label class="radio-wrapper_layer">
                     <span class="radio-img-wr_layer">
                         <img src="images/layer2.png" alt="">
                     </span>
                     <span class="radio-label_layer">Медовый</span>
-                    <input type="radio">
+                    <input id="layer4" type="radio">
                 </label>
                 <label class="radio-wrapper_layer">
                     <span class="radio-img-wr_layer">
                         <img src="images/layer1.png" alt="">
                     </span>
                     <span class="radio-label_layer">Корж из слоеного теста</span>
-                    <input type="radio">
+                    <input id="layer5" type="radio">
                 </label>
             </div>
         </div>
