--- a/src/css/parts/designer.less
+++ b/src/css/parts/designer.less
@@ -18,7 +18,7 @@
 }
 
 .designer__backgrround_bottom {
-    background: url(../../images/background/designer_background-bottom.png) no-repeat center;
+    background: url(../../images/background/designer_background-bottom.png) no-repeat center top;
     background-size: 100%;
     width: 100%;
     height: 125px;
@@ -345,8 +345,14 @@ input[type="radio"], input[type="file"] {
 
 .ui-datepicker {
     background: #ffffff;
-    padding: 10px;
-    top: 3374px;
+    padding: 10px 10px 10px 15px;
+    width: 200px;
+    height: 190px;
+    font-size: 18px;
+}
+
+.ui-datepicker-calendar {
+    width: 100%;
 }
 
 .ui-datepicker-calendar a {
