--- a/src/css/parts/header.less
+++ b/src/css/parts/header.less
@@ -11,6 +11,7 @@ header {
 .mobile-menu {
     display: none;
     background: #dee2e5;
+    width: 290px;
 }
 
 .navbar_mobile {
@@ -237,7 +238,7 @@ header {
     .logo-tel_for-mobile {
         width: 160px;
         position: absolute;
-        top: 10px;
+        top: 5px;
         left: 0;
         right: 0;
         margin: 0 auto; 
@@ -280,4 +281,15 @@ header {
 
 @media screen and (max-width: 639px) {
     
+    header .logo {
+        width: 130px;
+    }
+    
+    .cart__icon {
+        width: 25px;
+    }
+    
+    .cart__sum {
+        font-size: 16px;
+    }
 }
